Fix stacking elements using z-index 1/2

--- a/app/assets/stylesheets/pages.css
+++ b/app/assets/stylesheets/pages.css
@@ -18,10 +18,13 @@ video#bgvid {
   transform: translateX(-50%) translateY(-50%);
   background: url(2.jpeg) no-repeat;
   background-size: cover;
+  z-index: 2;
 }
 
-#videos-container {
-  background-color: black;
+
+.video-div{
+  width: 100%;
   height: 100vh;
-  visibility: hidden;
+  background-color: black;
+  z-index: 1;
 }
